# assignments
add_subdirectory(assignment0)
add_subdirectory(assignment1)
add_subdirectory(assignment2)
add_subdirectory(assignment3)

# demos
add_subdirectory(demo0)

# work sessions
add_subdirectory(worksession0)
add_subdirectory(worksession1)
add_subdirectory(worksession2)
add_subdirectory(worksession3)
add_subdirectory(worksession4)
add_subdirectory(worksession5)
add_subdirectory(worksession6)