# assignments
add_subdirectory(assignment0)   # blinnphong
add_subdirectory(assignment1)   # post processing
add_subdirectory(assignment2)   # shadow mapping
add_subdirectory(assignment3)   # deffered rendering
add_subdirectory(assignment4)   # splines

# work sessions
add_subdirectory(worksession0)
add_subdirectory(worksession1)
add_subdirectory(worksession2)
add_subdirectory(worksession3)
add_subdirectory(worksession4)
add_subdirectory(worksession5)
add_subdirectory(worksession6)
add_subdirectory(worksession7)
add_subdirectory(worksession8)