# assignments
add_subdirectory(assignment0)   # blinnphong
add_subdirectory(assignment1)   # post processing
add_subdirectory(assignment2)   # shadow mapping
add_subdirectory(assignment3)   # deffered rendering
add_subdirectory(assignment4)   # splines

# work sessions
add_subdirectory(worksession0)  # pbr
add_subdirectory(worksession1)  # water (zelda windwaker)
add_subdirectory(worksession2)  # landmass
add_subdirectory(worksession3)  # water (mario sunshine)
add_subdirectory(worksession4)  # toon shading
add_subdirectory(worksession5)  # transitions
add_subdirectory(worksession6)  # complex geometries
add_subdirectory(worksession7)  # water (double-dash)
add_subdirectory(worksession8)  # snow